--- a/tests/dummy/snippets/usage.hbs
+++ b/tests/dummy/snippets/usage.hbs
@@ -1,6 +1,7 @@
 {{#ember-scroll-progress
   progressContainerClass="progress-container"
   progressBarClass="progress-bar"
+  reduceOffsetTopBy=85
 }}
   <!-- page content -->
 {{/ember-scroll-progress}}
