Updates the dummy application

--- a/tests/dummy/app/styles/app.less
+++ b/tests/dummy/app/styles/app.less
@@ -2,6 +2,7 @@ body {
   background-color: #FDFDFD;
   margin: 0;
   line-height: 1.4;
+  color: #865931
 }
 
 p {
@@ -23,12 +24,14 @@ p {
 }
 
 .header-section {
-  width: 100%;
   background: #FFFDF9;
   position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   border-bottom: 1px solid #F8E7CF;
   margin-top: 5px;
+  padding: 0 15px;
   h1 {
     color: #dd6a58;
     small {
@@ -41,7 +44,7 @@ p {
 
 .content-section {
   margin-top: 85px;
-  padding: 50px 0;
+  padding: 50px 15px;
   .container {
     background: #FFFDF9;
     padding: 20px;
@@ -57,5 +60,18 @@ p {
       background-color: #fff;
       border: 1px solid #ededed;
     }
+  }
+}
+
+.footer-section {
+  padding: 0 15px;
+  border-top: 1px solid #F8E7CF;
+  text-align: center;
+  p {
+    font-size: 13px;
+  }
+  a {
+    color: #07C;
+    text-decoration: none;
   }
 }
