--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,7 +1,7 @@
 {{#ember-scroll-progress progressContainerClass="progress-container" progressBarClass="progress-bar" reduceOffsetTopBy=85}}
   <div class="header-section">
     <div class="container">
-      <h1>Scroll Progress Bar Demo <small>by Gowtham Raj M</small></h1>
+      <h1>Scroll Progress Bar Demo</h1>
     </div>
   </div>
   <div class="content-section">
@@ -44,6 +44,11 @@
         <li>ember build</li>
       </ul>
 
+    </div>
+  </div>
+  <div class="footer-section">
+    <div class="container">
+      <p>Developed by <a href="https://github.com/gowthamrm">@gowthamrm</a></p>
     </div>
   </div>
 {{/ember-scroll-progress}}
