Provides option to only update the colour and height of the progress bar

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -1,13 +1,9 @@
-.em-progress-bar-container {
-  background: transparent;
+.em-progress-bar {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-}
-
-.em-progress-bar {
   width: 0;
-  height: 5px;
+  height: 3px;
   background-color: #333;
+  z-index: 999;
 }
