--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,4 +1,4 @@
-{{#ember-scroll-progress progressContainerClass="progress-container" progressBarClass="progress-bar" reduceOffsetTopBy=85}}
+{{#ember-scroll-progress height=3 color="#dd6a58" reduceOffsetTopBy=85}}
   <div class="header-section">
     <div class="container">
       <h1>Scroll Progress Bar Demo</h1>
@@ -13,9 +13,9 @@
       {{code-snippet name="usage.hbs" class="code-snippet"}}
       <h3>Parameters:</h3>
       <ul>
-        <li><b>progressContainerClass</b> will have the custom style elements for the progress bar container. This class can be used to position the progress bar.</li>
-        <li><b>progressBarClass</b> can be used to customize the progress bar.</li>
-        <li><b>reduceOffsetTopBy</b> can be used to set the top offset based on the scroll container's top position inside the page.</li>
+        <li><b>height</b> to customize the the height of the progress bar.</li>
+        <li><b>color</b> to provide a customizable color/color code for the progress bar.</li>
+        <li><b>reduceOffsetTopBy</b> to set the top offset based on the scroll container's top position inside the page.</li>
       </ul>
 
       <h3>Installation:</h3>
