--- a/tests/dummy/snippets/usage.hbs
+++ b/tests/dummy/snippets/usage.hbs
@@ -1,6 +1,6 @@
 {{#ember-scroll-progress
-  progressContainerClass="progress-container"
-  progressBarClass="progress-bar"
+  height=5
+  color="red"
   reduceOffsetTopBy=85
 }}
   <!-- page content -->
