--- a/tests/dummy/snippets/usage.hbs
+++ b/tests/dummy/snippets/usage.hbs
@@ -3,5 +3,6 @@
   color="red"
   reduceOffsetTopBy=85
 }}
-  <!-- page content -->
+  <!-- application content -->
+  {{outlet}}
 {{/ember-scroll-progress}}
