--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,54 +1,73 @@
-{{#ember-scroll-progress height=3 color="#dd6a58" reduceOffsetTopBy=85}}
-  <div class="header-section">
+{{#ember-scroll-progress height=4 color="#454545" reduceOffsetTopBy=0}}
+  <div class="demo-section">
     <div class="container">
-      <h1>Scroll Progress Bar Demo</h1>
-    </div>
-  </div>
-  <div class="content-section">
-    <div class="container">
-      <h2 class="title">ember-scroll-progress</h2>
-      <p>A simple ember addon component for displaying an amount a page is scrolled via a progress bar.<br> Scroll the page to view this page's progress on top.</p>
+      <div class="header-section text-center">
+        <h1>Ember Scroll Progress <small>A simple ember addon component for displaying an amount a page is scrolled via a progress bar. Scroll the page to view this page's progress on top.</small></h1>
+        <p class="badges">
+          <a href="https://badge.fury.io/js/ember-scroll-progress" target="_blank">
+            <img src="https://badge.fury.io/js/ember-scroll-progress.svg" alt="npm version" />
+          </a>&nbsp;
+          <a href="https://travis-ci.org/gowthamrm/ember-scroll-progress" target="_blank">
+            <img src="https://travis-ci.org/gowthamrm/ember-scroll-progress.svg?branch=master" alt="Build Status" />
+          </a>&nbsp;
+          <div class="gh-section">
+            <a class="btn-gh" href="https://github.com/gowthamrm/ember-scroll-progress" target="_blank">
+              <img src="images/github-light.png" alt="Github" /> &nbsp;View on Github
+            </a>
+          </div>
+        </p>
+      </div>
+      <div class="content-section">
+        <h2 class="title">Overview</h2>
+        <p>The amount of content left to be read in the page is shown using a progress bar on top of the page. This is calculated based on the page's scroll. </p>
 
-      <h3>Usage:</h3>
-      {{code-snippet name="usage.hbs" class="code-snippet"}}
-      <h3>Parameters:</h3>
-      <ul>
-        <li><b>height</b> to customize the the height of the progress bar.</li>
-        <li><b>color</b> to provide a customizable color/color code for the progress bar.</li>
-        <li><b>reduceOffsetTopBy</b> to set the top offset based on the scroll container's top position inside the page.</li>
-      </ul>
+        <h2>Installation:</h2>
+        {{code-snippet name="installation.hbs" class="code-snippet"}}
 
-      <h3>Installation:</h3>
-      <ul>
-        <li>git clone this repository</li>
-        <li>cd ember-scroll-progress</li>
-        <li>npm install</li>
-        <li>bower install</li>
-      </ul>
+        <h2>Usage:</h2>
+        {{code-snippet name="usage.hbs" class="code-snippet"}}
+        <small>Note: Add the component in the application template to get the scroll preview for all the routes accessed inside the application.</small>
 
-      <h3>Running</h3>
-      <ul>
-        <li>ember serve</li>
-        <li>Visit your app at <a href="http://localhost:4200">http://localhost:4200</a>.</li>
-      </ul>
+        <h2>Parameters:</h2>
+        <ul>
+          <li><b>offsetTop</b> to set the top offset based on the scroll container's top position inside the page.</li>
+          <li>
+            <b>position</b> to specify the position of the scroll preview container.<br>
+            Available positions,
+            <ul>
+              <li> top / left / top-left / left-top </li>
+              <li> bottom / bottom-left / left-bottom </li>
+              <li> right / top-right / right-top </li>
+              <li> bottom-right / right-bottom </li>
+            </ul>
+          </li>
+        </ul>
 
-      <h3>Running Tests</h3>
-      <ul>
-        <li>npm test (Runs `ember try:each` to test your addon against multiple Ember versions)</li>
-        <li>ember test</li>
-        <li>ember test --server</li>
-      </ul>
+        <h2>Collaborating on this project</h2>
 
-      <h3>Building</h3>
-      <ul>
-        <li>ember build</li>
-      </ul>
+        <h3>Installation</h3>
+        {{code-snippet name="installation.sh" class="code-snippet"}}
 
-    </div>
-  </div>
-  <div class="footer-section">
-    <div class="container">
-      <p>Developed by <a href="https://github.com/gowthamrm">@gowthamrm</a></p>
+        <h3>Running the dummy app</h3>
+        {{code-snippet name="running.sh" class="code-snippet"}}
+        <small>Visit your app at <a href="http://localhost:4200">http://localhost:4200</a></small>
+
+        <h3>Running Tests</h3>
+        {{code-snippet name="tests.sh" class="code-snippet"}}
+
+        <h3>Building</h3>
+        {{code-snippet name="build.sh" class="code-snippet"}}
+
+      </div>
+      <div class="footer-section">
+        <a href="https://github.com/gowthamrm" target="_blank">
+          <img src="images/github-light.png" alt="Github" />
+        </a>
+        <a href="https://twitter.com/gtm_raz" target="_blank">
+          <img src="images/twitter-light.png" alt="Github" />
+        </a>
+        <div><a href="https://github.com/gowthamrm" target="_blank">@gowthamrm</a></div>
+      </div>
     </div>
   </div>
 {{/ember-scroll-progress}}
